# DumpSource2

./: .gitmodules  CMakeLists.txt  NOTICE  README.md
.claude/skills/update-hl2sdk-submodule/: SKILL.md
.github/workflows/: build.yml
cmake/: platform.cmake
src/main/: CMakeLists.txt  appframework.cpp  application.h  globalvariables.h  main.cpp
src/main/dumpers/concommands/: concommands.cpp
src/main/dumpers/schemas/: json_generator.h  metadata_stringifier.cpp  metadata_stringifier.h  metadatalist.h  schemas.cpp
src/main/utils/: common.cpp  hash.h  module.h  plat.h
